<resources>
    <string name="app_name">RobotRally</string>
    <string name="obstacle_hit">Your robot has hit an obstacle.</string>
    <string name="obstacle_hit_description">Your robot has hit an obstacle. Try another
    combination of moves that moves the robot around the obstacle.</string>
    <string name="robot_lost">Your robot has gotten lost</string>
    <string name="robot_lost_description">Your robot has gotten lost. Try another combination
    of moves to get the robot to its destination.</string>
    <string name="retry_button">Retry</string>
    <string name="image_description">image representing how well you completed the level</string>
    <string name="next_image_description">next level button</string>
    <string name="retry_image_description">retry level button</string>
    <string name="last_image_description">last level button</string>
    <string name="background_status_bar_description">background for the status bar</string>
    <string name="status_bar_description">variable length status bar</string>
    <string name="level_win">Victory!</string>
    <string name="goal_text">Goal</string>
    <string name="total_moves_text">Total Moves</string>
    <string name="best_moves_text">Best</string>
    <string name="level_win_button1">Retry</string>
    <string name="level_win_button2">Next Level</string>
    <string name="level_win_button3">Last Level</string>
    <string name="save_debug_header">Save Debug</string>
    <string name="save_debug_close">X</string>
    <string name="save_debug_moveSeq">Move Seq:</string>
    <string name="save_debug_numAttempts">Num Attempts:</string>
    <string name="save_debug_effScore">Eff Score:</string>
    <string name="save_debug_totalSquares">Sq Traveled:</string>
    <string name="save_debug_curMoveDiff">Cur Move Diff:</string>
    <string name="save_debug_bestMoveDiff">Best Move Diff:</string>
    <string name="save_debug_percentColl">Percent Coll:</string>
    <string name="subroutine_title">Edit Subroutines</string>
    <string name="move_list">List of moves</string>
    <string name="a_subroutine_label">A</string>
    <string name="b_subroutine_label">B</string>
    <string name="close_button">Close</string>
    <string name="max_moves_placeholder">Max Moves: 4</string>
</resources>