<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350sp"
    android:layout_height="300sp"
    android:background="@color/light_grey"
    android:layout_gravity="center">

    <!-- this is the win screen. -->
    <TextView
        android:id="@+id/robot_hit_text"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:text="@string/level_win"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:background="@color/dark_gray"
        android:gravity="center" />


    <TextView
        android:id="@+id/goal_moves_number"
        android:layout_below="@id/robot_hit_text"
        android:layout_width="100sp"
        android:layout_height="70sp"
        android:textSize="50sp"
        android:gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/goal_moves_text"
        android:layout_below="@id/goal_moves_number"
        android:layout_width="100sp"
        android:layout_height="25sp"
        android:text="@string/goal_text"
        android:gravity="center"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/total_moves"
        android:layout_below="@id/robot_hit_text"
        android:layout_toEndOf="@id/goal_moves_number"
        android:layout_width="100sp"
        android:layout_height="70sp"
        android:layout_marginHorizontal="25sp"
        android:textSize="50sp"
        android:gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/total_moves_text"
        android:layout_below="@id/goal_moves_number"
        android:layout_toEndOf="@id/goal_moves_text"
        android:layout_marginHorizontal="25sp"
        android:layout_width="100sp"
        android:layout_height="25sp"
        android:text="@string/total_moves_text"
        android:gravity="center"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/best_moves"
        android:layout_below="@id/robot_hit_text"
        android:layout_toEndOf="@id/total_moves"
        android:layout_width="100sp"
        android:layout_height="70sp"
        android:textSize="50sp"
        android:gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/best_moves_text"
        android:layout_below="@id/goal_moves_number"
        android:layout_toEndOf="@id/total_moves_text"
        android:layout_width="100sp"
        android:layout_height="25sp"
        android:text="@string/best_moves_text"
        android:gravity="center"
        android:textSize="20sp"
        />

    <ImageView
        android:id="@+id/status_bar_background"
        android:layout_width="300sp"
        android:layout_height="40sp"
        android:layout_marginVertical="20sp"
        android:layout_marginHorizontal="25sp"
        android:background="@color/gray"
        android:layout_below="@id/best_moves_text"
        android:contentDescription="@string/background_status_bar_description"/>
    <ImageView
        android:id="@+id/status_bar_inside_295total"
        android:layout_width="250sp"
        android:layout_height="35sp"
        android:layout_below="@id/best_moves_text"
        android:layout_marginVertical="22.5sp"
        android:layout_marginHorizontal="27.5sp"
        android:contentDescription="@string/status_bar_description"
        android:background="@color/light_grey"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/last_level_button"
        android:layout_width="100sp"
        android:layout_height="65sp"
        android:layout_below="@id/status_bar_background"
        android:background="@drawable/last_level_symbol_updated"
        android:textSize="20sp"
        android:contentDescription="@string/last_image_description"
        android:layout_marginHorizontal="8.33sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/RetryButton"
        android:layout_width="100sp"
        android:layout_height="65sp"
        android:layout_below="@id/status_bar_background"
        android:layout_marginHorizontal="10sp"
        android:textSize="25sp"
        android:layout_toEndOf="@id/last_level_button"
        android:contentDescription="@string/retry_image_description"
        android:background="@drawable/restart_image"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next_level_button"
        android:layout_width="100sp"
        android:layout_height="65sp"
        android:layout_below="@id/status_bar_background"
        android:layout_toEndOf="@id/RetryButton"
        android:textSize="20sp"
        android:background="@drawable/next_image"
        android:contentDescription="@string/next_image_description"
        android:layout_marginHorizontal="8.33sp"/>

</RelativeLayout>